<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/stand_bg">

        <RelativeLayout
            android:id="@+id/layoutRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:id="@+id/layoutTop2FA"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/backImage"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_menu_back" />

                    <TextView
                        android:id="@+id/loginClose2FA"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="15dp"
                        android:gravity="center"
                        android:text="关闭两步验证"
                        android:textColor="@color/font_green"
                        android:textSize="15sp" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp">

                    <TextView
                        android:id="@+id/login2FA"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:text="@string/title_activity_login2_fatip"
                        android:textColor="@color/font_green"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/loginLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/loginTitle"
                            android:minHeight="42dp"
                            android:text="登录"
                            android:textColor="#FF212B3A"
                            android:textSize="30sp" />

                        <net.coding.program.common.widget.LoginAutoCompleteEdit
                            android:id="@+id/editName"
                            style="@style/EditLogin"
                            android:hint="用户名/手机/邮箱"
                            android:inputType="textEmailAddress"
                            app:darkness="true" />

                        <net.coding.program.common.LoginEditText
                            android:id="@+id/editPassword"
                            style="@style/EditLogin"
                            android:hint="密码"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            app:dark="true" />

                        <RelativeLayout
                            android:id="@+id/captchaLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            tools:visibility="visible"
                            android:visibility="gone">

                            <EditText
                                android:id="@+id/editValify"
                                style="@style/EditLogin"
                                android:hint="验证码" />

                            <ImageView
                                android:id="@+id/imageValify"
                                android:layout_width="72dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="25dp"
                                tools:background="@color/font_2"
                                android:layout_alignParentRight="true"
                                android:scaleType="fitCenter" />

                        </RelativeLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout2fa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="42dp"
                            android:text="两步验证"
                            android:textColor="#FF212B3A"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="您的账户开启了两步验证，请输入动态验证码登录"
                            android:textColor="@color/font_1"
                            android:textSize="14sp" />

                        <net.coding.program.common.LoginEditText
                            android:id="@+id/edit2FA"
                            style="@style/EditLogin"
                            android:layout_marginTop="25dp"
                            android:hint="两步验证码"
                            android:imeOptions="actionUnspecified"
                            android:inputType="number"
                            app:dark="true" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/loginFail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:text="忘记密码？"
                        android:textColor="@color/font_green"
                        android:textSize="14sp" />

                    <com.flyco.roundview.RoundTextView
                        android:id="@+id/loginButton"
                        android:text="登录"
                        app:rv_backgroundColor="@color/font_green"
                        style="@style/sendRoundButton" />


                    <TextView
                        android:id="@+id/loginWeixin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_login_wexin"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="微信登录"
                        android:textColor="@color/font_1"
                        android:textSize="14sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="21dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/register"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="注册新账号"
                            android:textColor="@color/font_1"
                            android:textSize="14sp" />

                    </LinearLayout>

                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>

