<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Your normal content view -->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- battomBar 的阴影是 4 dp -->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/main_container_merge_bottom" />

        <!--actionbar 的阴影，用在4.4上面-->
        <include layout="@layout/actionbar_shadow" />

        <!--<View style="@style/DivideLine" />-->

        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/bottomColorPrimary"
            app:bb_activeTabColor="@color/font_green"
            app:bb_inActiveTabColor="@color/font_4"
            app:bb_showShadow="true"
            app:bb_tabXmlResource="@xml/bottombar_tabs"
            app:bb_titleTextAppearance="@style/BottomTabTitle" />
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
